# FastCosyVoice

./: .env  .gitignore  README.md  asr.py  pyproject.toml  run_basic.py  run_fast.py  run_offline.py  server.py
fastcosyvoice/: cosyvoice.py
settings/: main.py
src/: .gitignore  My_compute.py  client.py  pyproject.toml  server.py  test.py
src/cosyvoice/cli/: frontend.py
