[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcosyvoice"
version = "0.1.0"
description = "Faster inference for CoxyVoice3"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "conformer>=0.3.2",
    "diffusers>=0.36.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "hyperpyyaml>=1.2.2",
    "inflect>=7.5.0",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "matcha-tts>=0.0.7.2",
    "modelscope>=1.33.0",
    "numpy<2.0",
    "omegaconf>=2.3.0",
    "onnx==1.19.1",
    "onnxruntime==1.21.1",
    "onnxruntime-gpu==1.21.1",
    "openai-whisper>=20250625",
    "pyworld>=0.3.5",
    "silero-stress>=1.3",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "torchcodec>=0.9.1",
    "transformers>=4.53.1",
    "wetext>=0.1.2",
    "wget>=3.2",
    "x-transformers>=2.11.24",
    "pyarrow>=23.0.0",
    "faster-whisper>=1.2.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "typing-extensions>=4.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cosyvoice", "fastcosyvoice"]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
name = "nvidia"
explicit = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
name = "pytorch-cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
